forge/mcp/logs/client_compile.log
src\minecraft\mod\legendaire45\mod_retrogame.java:186: error: unmappable character for encoding UTF-8
		    ModLoader.addSpawn(EntityCheval.class, 100, 10, 10,EnumCreatureType.creature,new BiomeGenBase[] {BiomeGenBase.desert,  BiomeGenBase.beach, BiomeGenBase.plains, BiomeGenBase.forest }); // nombre de mobs spawn?s et choix des biomes pour le spawn 
		                                                                                                                                                                                                                   ^
src\minecraft\mod\legendaire45\entity\mobs\EntityCheval.java:19: error: unmappable character for encoding UTF-8
        moveSpeed = 1.0F;                   // r?glez ca vitesse ici
                                                ^
2 errors
